[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/X.svg" type="Texture" id=1]
[ext_resource path="res://Assets/triangle.svg" type="Texture" id=2]
[ext_resource path="res://Assets/square.svg" type="Texture" id=3]
[ext_resource path="res://Assets/circle.svg" type="Texture" id=4]
[ext_resource path="res://Scripts/game.gd" type="Script" id=5]
[ext_resource path="res://Assets/COMIC.TTF" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 72
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 72
font_data = ExtResource( 6 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1009.0
margin_bottom = 595.0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
margin_right = 1009.0
margin_bottom = 595.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
columns = 3

[node name="square" type="TextureButton" parent="VBoxContainer/GridContainer"]
margin_right = 334.0
margin_bottom = 296.0
size_flags_horizontal = 7
size_flags_vertical = 7
action_mode = 0
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/GridContainer"]
margin_left = 338.0
margin_right = 672.0
margin_bottom = 296.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="x" type="TextureButton" parent="VBoxContainer/GridContainer"]
margin_left = 676.0
margin_right = 1009.0
margin_bottom = 296.0
size_flags_horizontal = 11
size_flags_vertical = 11
action_mode = 0
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="triangle" type="TextureButton" parent="VBoxContainer/GridContainer"]
margin_top = 300.0
margin_right = 334.0
margin_bottom = 595.0
size_flags_horizontal = 3
size_flags_vertical = 3
action_mode = 0
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/GridContainer"]
margin_left = 338.0
margin_top = 300.0
margin_right = 672.0
margin_bottom = 595.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="circle" type="TextureButton" parent="VBoxContainer/GridContainer"]
margin_left = 676.0
margin_top = 300.0
margin_right = 1009.0
margin_bottom = 595.0
action_mode = 0
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="."]
margin_left = 407.0
margin_top = 341.0
margin_right = 576.0
margin_bottom = 434.0
custom_fonts/font = SubResource( 1 )
text = "play"

[node name="Label2" type="Label" parent="."]
margin_left = 392.0
margin_top = 121.0
margin_right = 559.0
margin_bottom = 222.0
custom_fonts/font = SubResource( 2 )

[node name="Label3" type="Label" parent="."]
margin_left = 395.0
margin_top = 235.0
margin_right = 582.0
margin_bottom = 336.0
custom_fonts/font = SubResource( 2 )

[connection signal="pressed" from="VBoxContainer/GridContainer/square" to="." method="_on_square_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/x" to="." method="_on_x_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/triangle" to="." method="_on_triangle_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/circle" to="." method="_on_circle_pressed"]
